<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Início -->
    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home" />

    <!-- Perfil -->
    <item
        android:id="@+id/nav_profile"
        android:title="@string/nav_profile" />

    <!-- Minha lista -->
    <item
        android:id="@+id/nav_mylist"
        android:title="@string/nav_mylist" />

    <!-- Downloads -->
    <item
        android:id="@+id/nav_downloads"
        android:title="@string/nav_downloads" />

    <!-- Assinatura -->
    <item
        android:id="@+id/nav_subscription"
        android:title="@string/nav_subscription" />

    <!-- Configurações -->
    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_settings" />

</menu>
