<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_profile"
        android:title="@string/profile"
        android:icon="@drawable/icone_perfil"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_catalog"
        android:title="@string/catalog"
        android:icon="@drawable/icone_catalogo"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_home"
        android:title="@string/home"
        android:icon="@drawable/icone_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_mylist"
        android:title="@string/label_mylist"
        android:icon="@drawable/icone_perfil"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_menu"
        app:showAsAction="never" />

    <!-- item global usado pelo código: action_more -->
    <item
        android:id="@+id/action_more"
        android:title="@string/action_more"
        android:icon="@drawable/ic_menu"
        app:showAsAction="never" />
</menu>
